--- a/gst/elements/gvametapublish/CMakeLists.txt
+++ b/gst/elements/gvametapublish/CMakeLists.txt
@@ -49,3 +49,6 @@ endif()
 if(${ENABLE_RDKAFKA_INSTALLATION})
     add_subdirectory(kafka)
 endif()
+if(${ENABLE_PRAVEGA_INSTALLATION})
+    add_subdirectory(pravega)
+endif()
